consolidated stacks with looping and more incredible tweaks. still tuning layout issues.

--- a/css/main.css
+++ b/css/main.css
@@ -224,11 +224,11 @@ input[type="number"], button {
 	position: relative;
 	margin: 20px;
 	background: #10171D;
-	
+
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
-	
+
 	-webkit-box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
 	-moz-box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
 	box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
@@ -240,8 +240,8 @@ input[type="number"], button {
 	background: #333;
 	position: relative;
 	top: -4px;
-	left: 4px;	
-	
+	left: 4px;
+
 	background: #1d2e38;
 	background: -moz-linear-gradient(left, #1d2e38 0%, #2b4254 50%, #2b4254 100%);
 	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#1d2e38), color-stop(50%,#2b4254), color-stop(100%,#2b4254));
@@ -249,8 +249,8 @@ input[type="number"], button {
 	background: -o-linear-gradient(left, #1d2e38 0%,#2b4254 50%,#2b4254 100%);
 	background: -ms-linear-gradient(left, #1d2e38 0%,#2b4254 50%,#2b4254 100%);
 	background: linear-gradient(left, #1d2e38 0%,#2b4254 50%,#2b4254 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d2e38', endColorstr='#2b4254',GradientType=1 );	
-	
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d2e38', endColorstr='#2b4254',GradientType=1 );
+
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
@@ -262,11 +262,11 @@ input[type="number"], button {
 	width: 388px;
 	top: 6px;
 	left: 6px;
-		
+
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
-	
+
 	background: rgba(255, 255, 255, 0.25);
 }
 
@@ -276,11 +276,11 @@ input[type="number"], button {
 	position: relative;
 	margin: 20px;
 	background: #10171D;
-	
+
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
-	
+
 	-webkit-box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
 	-moz-box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
 	box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.9), 0px 1px 1px 0px rgba(255, 255, 255, 0.13);
@@ -292,8 +292,8 @@ input[type="number"], button {
 	background: #333;
 	position: relative;
 	top: -4px;
-	left: 4px;	
-	
+	left: 4px;
+
 	background: #1d2e38;
 	background: -moz-linear-gradient(left, #1d2e38 0%, #2b4254 50%, #2b4254 100%);
 	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#1d2e38), color-stop(50%,#2b4254), color-stop(100%,#2b4254));
@@ -301,8 +301,8 @@ input[type="number"], button {
 	background: -o-linear-gradient(left, #1d2e38 0%,#2b4254 50%,#2b4254 100%);
 	background: -ms-linear-gradient(left, #1d2e38 0%,#2b4254 50%,#2b4254 100%);
 	background: linear-gradient(left, #1d2e38 0%,#2b4254 50%,#2b4254 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d2e38', endColorstr='#2b4254',GradientType=1 );	
-	
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d2e38', endColorstr='#2b4254',GradientType=1 );
+
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
@@ -314,11 +314,11 @@ input[type="number"], button {
 	width: 190px;
 	top: 6px;
 	left: 6px;
-		
+
 	-webkit-border-radius: 40px;
 	-moz-border-radius: 40px;
 	border-radius: 40px;
-	
+
 	background: rgba(255, 255, 255, 0.25);
 }
 
@@ -369,43 +369,56 @@ li {
     display: inline-block;
 }
 
-#FeatureDataStrings, #FeatureValues, #AutonomousScoring, #position, #FeatureComments, #teamLabel, #teamDisp {
+#FeatureDataStrings, #FeatureValues, #AutonomousScoring, #position, #FeatureComments, #teamLabel, #teamDisp,  {
     display: inline-block;
     vertical-align: middle;
 }
 
-#AutonomousScoring  {
+#AutonomousScoring   {
     width: 300px;
     margin-left: 10;
     margin-right: auto;
     text-align: right;
 }
 
-#stacks {
+#stacks, .stacks {
     display: inline-block;
     margin-left: 8px;
     margin-right: float;
     text-align: center;
 }
 
-#stacks2 {
+#Stack1, #Stack2, #Stack3, #Stack4, #Stack5, #Stack6, #Stack7, #Stack8, #Stack9, #Stack10,
+#Stack11, #Stack12, #Stack13, #Stack14, #Stack15, #Stack16, #Stack17, #Stack18, #Stack19, #Stack20
+{
     display: inline-block;
     width: 55px;
     margin-left: 5px;
     margin-right: auto;
 }
 
-#stacks3 {
+.stacks3, .LandFill {
     display: inline-block;
     margin="20px"
     text-align: right;
 }
+
+.headerDivider {
+    display: inline-block;
+    margin="20px"
+    margin-left: 40px;
+    text-align: right;
+    border-left:2px solid #38546d;
+    border-right:2px solid #16222c;
+    height:180px;
+    top:10px;
+	}
 #StartLocation, #TeleopSliders, #TeleScoring, #frm_loading_location, #FeatureComments {
     margin-left: 40px;
 }
 
 #MatchDataStrings {
-    line-height: 2.4em; 
+    line-height: 2.4em;
 }
 
 #About {
@@ -613,4 +626,6 @@ li {
     h3 {
         page-break-after: avoid;
     }
+
+
 }
